--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "tailwindcss": "^3.0.18"
+    },
+    "dependencies": {
+        "@tinymce/tinymce-react": "^4.3.2"
     }
 }
